Update StreamGatherers.java